--- a/customer_application/jenkinsfile
+++ b/customer_application/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
 	agent any
 
 	environment {
-		mavenHome = tool 'jenkins-maven'
+		mavenHome = tool 'apache-maven-3.9.6'
 	}
 
 	tools {
