--- a/customer_application/Dockerfile
+++ b/customer_application/Dockerfile
@@ -1,4 +1,4 @@
-FROM openJDK:17
+FROM openjdk:17
 EXPOSE 8080
 ADD target/customer-integration.jar customer-integration
 ENTRYPOINT ["java", "-jar", "/customer-integration.jar"]
