--- a/customer_application/dockerfile
+++ b/customer_application/dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:17
-COPY customer_application/target/customer-integration.jar app.jar
+COPY target/customer-integration.jar customer-integration
 ENTRYPOINT ["java","-jar","/app.jar"]
