--- a/customer_application/dockerfile
+++ b/customer_application/dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:17
 COPY target/customer-integration.jar customer-integration
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","/customer-integration.jar"]
