--- a/customer_application/dockerfile
+++ b/customer_application/dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:17
-ADD target/customer-integration.jar customer-integration
+COPY target/customer-integration.jar customer-integration
 ENTRYPOINT ["java","-jar","/customer-integration.jar"]
