new changes dfile

--- a/customer_application/dockerfile
+++ b/customer_application/dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:17
-COPY target/customer-integration.jar customer-integration
+COPY target/customer-integration.jar /app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
+
