--- a/customer_application/dockerfile
+++ b/customer_application/dockerfile
@@ -1,4 +1,7 @@
 FROM openjdk:17
-COPY target/customer-integration.jar /app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+COPY target/customer-integration.jar /customer_application/app.jar
+WORKDIR /customer_application
+ENTRYPOINT ["java", "-jar", "app.jar"]
+
+
 
